<resources>
    <string name="app_name">Check</string>

    <string name="home_menu">Home</string>
    <string name="browse_menu">Browse Profiles</string>
    <string name="my_profile_menu">My Profile</string>
    <string name="preferences_menu">Preferences</string>
    <string name="log_out_menu">Log out</string>

    <string name="open_menu">Open</string>
    <string name="close_menu">Close</string>

    <string name="username">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="hometown">Hometown</string>

    <string name="sign_up"> <u>Sign up now</u> </string>
    <string name="login_button">Log in</string>
    <string name="create_account">Create Account</string>

    <string name="logo_description">Logo</string>

    <string name="preference_category">My Preferences</string>
    <string name="preference_notification">Notifications</string>
    <string name="notification_summary">Get push notifications</string>
    <string name="preference_major">Preferred Major</string>
    <string name="major_summary">Select your preferred major</string>

    <string name="major_label">Major</string>
    <string name="about_me_label">About me</string>
    <string name="hometown_label">Hometown</string>
    <string name="save">Save</string>

    <string name="home_fragment_header">Youve been paired up!</string>
    <string name="location_label">Location: Cafe Russo</string>
    <string name="time_label">Meet time: </string>
    <string name="rating_label">Flake rating: </string>

    <string name="time_start_label">Time start </string>
    <string name="time_end_label">Time end </string>
    <string name="time_start_placeholder">00:00 pm </string>
    <string name="time_end_placeholder">00:00 pm</string>
    <string name="find_partner">Find Partner</string>
    <string name="searching_partner">Searching for partner</string>
    <string name="cancel">Cancel</string>
    <string name="set_start_time">Select start time</string>
    <string name="set_end_time">Select end time</string>

    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

    <string name="searching_users">People currently searching</string>

    <string name="browse_default_text">Cannot view profiles while looking for partners or while paired up. Stop search or end match and return to view profiles.</string>

    <string name="confirm_lunch">Lunch has been confirmed</string>
    <string name="flake">Flake</string>
    <string name="loading">Loading...</string>
    <string name="awaiting_response">Awaiting other Response...</string>
    <string name="required">Required</string>

    <array name="entries_list_preference">
        <item name="computer_science">Computer Science</item>
        <item name="biology">Biology</item>
        <item name="art">Art</item>
        <item name="marketing">Marketing</item>
        <item name="business">Business</item>
        <item name="any">Any</item>
    </array>

    <array name="entryvalues_list_preference">
        <item>computerScience</item>
        <item>biology</item>
        <item>art</item>
        <item>marketing</item>
        <item>business</item>
        <item>any</item>
    </array>

</resources>
