<android.support.v7.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.preference.PreferenceCategory
        android:title="@string/preference_category">

        <android.support.v7.preference.SwitchPreferenceCompat
            android:key="notifications"
            android:title="@string/preference_notification"
            android:summary="@string/notification_summary"
            android:defaultValue="true"/>

        <android.support.v7.preference.ListPreference
            android:key="major"
            android:title="@string/preference_major"
            android:summary="@string/major_summary"
            android:entries="@array/entries_list_preference"
            android:entryValues="@array/entryvalues_list_preference"
            android:defaultValue="any"/>

    </android.support.v7.preference.PreferenceCategory>

</android.support.v7.preference.PreferenceScreen>