<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_login_background"
    tools:context="com.example.kevinlay.check.login.LoginActivity">

    <ProgressBar
        android:id="@+id/progressBar3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible"/>

    <EditText
        android:id="@+id/loginFirstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:hint="@string/first_name"
        android:inputType="textPersonName"
        style="@style/EditTextLoginStyle"/>

    <EditText
        android:id="@+id/loginLastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginFirstName"
        android:hint="@string/last_name"
        android:inputType="textPersonName"
        style="@style/EditTextLoginStyle"/>

    <EditText
        android:id="@+id/loginHometown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginLastName"
        android:hint="@string/hometown"
        android:inputType="textPersonName"
        style="@style/EditTextLoginStyle"/>

    <EditText
        android:id="@+id/loginMajor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginHometown"
        android:hint="@string/major_label"
        android:inputType="textPersonName"
        style="@style/EditTextLoginStyle"/>

    <EditText
        android:id="@+id/loginUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginMajor"
        android:hint="@string/username"
        android:inputType="textPersonName"
        style="@style/EditTextLoginStyle"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginUsername"
        android:hint="@string/password"
        android:inputType="textPassword"
        style="@style/EditTextLoginStyle"/>

    <Button
        android:id="@+id/createAccount"
        android:text="@string/create_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        style="@style/ButtonLoginStyle"/>

</RelativeLayout>
