<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5C6BC0">

    <ImageView
        android:id="@+id/userProfileImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/medium_circle_shape"/>

    <ImageView
        android:id="@+id/ringImage1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/medium_circle_shape"/>

    <ImageView
        android:id="@+id/ringImage2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/medium_circle_shape"/>

    <LinearLayout
        android:id="@+id/timeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_above="@id/findPartner"
        style="@style/SplitLayoutStyle">

        <TextView
            android:id="@+id/timeStartLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/time_start_label"
            style="@style/TextViewLabelStyle"/>

        <TextView
            android:id="@+id/timeEndLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/white"
            android:text="@string/time_end_label"
            style="@style/TextViewLabelStyle"/>

    </LinearLayout>

    <Button
        android:id="@+id/findPartner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/cancelPartner"
        android:text="@string/find_partner"
        android:visibility="invisible"
        style="@style/ButtonActionStyle"/>

    <Button
        android:id="@+id/selectStartTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/set_start_time"
        style="@style/ButtonActionStyle"/>

    <Button
        android:id="@+id/selectEndTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/set_end_time"
        android:visibility="invisible"
        style="@style/ButtonActionStyle"/>

    <Button
        android:id="@+id/cancelPartner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/cancel"
        android:visibility="invisible"
        style="@style/ButtonActionStyle"/>

</RelativeLayout>